parametrize buildah image tag for build-vm-image

--- a/task/build-vm-image/0.1/build-vm-image.yaml
+++ b/task/build-vm-image/0.1/build-vm-image.yaml
@@ -38,6 +38,10 @@ spec:
       description: Storage driver to configure for buildah
       type: string
       default: vfs
+    - name: BUILDAH_IMAGE
+      description: Buildah image to use for the build process
+      type: string
+      default: registry.access.redhat.com/ubi9/buildah:9.5-1739778322
   results:
     - description: Digest of the manifest list just built
       name: IMAGE_DIGEST
@@ -219,7 +223,7 @@ spec:
           -v /var/lib/containers/storage:/var/lib/containers/storage \
           -v $BUILD_DIR/scripts/script-push.sh:/script-push.sh \
           -v $BUILD_DIR/tekton-results:/tekton-results \
-          registry.access.redhat.com/ubi9/buildah:9.5-1739778322 \
+          "$(params.BUILDAH_IMAGE)" \
           /script-push.sh
 
         REMOTESSHEOF
