set the BUILDAH_IMAGE value as a task ENV variable instead

--- a/renovate.json
+++ b/renovate.json
@@ -33,7 +33,7 @@
         "task/acs-image-check/**",
         "task/acs-image-scan/**",
         "task/apply-tags/**",
-         "task/build-image-index/**",
+        "task/build-image-index/**",
         "task/build-image-manifest/**",
         "task/buildah-10gb/**",
         "task/buildah-20gb/**",
@@ -244,7 +244,7 @@
       "customType": "regex",
       "fileMatch": ["^task/build-vm-image/.*/build-vm-image.yaml"],
       "matchStrings": [
-        "default: (?<depName>.*):(?<currentValue>.*)"
+        "BUILDAH_IMAGE\\s*\\n\\s*value:\\s*['\"]?(?<depName>[^'\":]+):(?<currentValue>[^'\":\\s]+)['\"]?"
       ],
       "depNameTemplate": "registry.access.redhat.com/ubi9/buildah",
       "datasourceTemplate": "docker",
