chore: add privileged-nested parameter to build pipelines
Add the `privileged-nested` parameter to the single and
multiplatform build pipelines

Signed-off-by: Miguel Martín <mmartinv@redhat.com>

--- a/pipelines/core-services/kustomization.yaml
+++ b/pipelines/core-services/kustomization.yaml
@@ -17,3 +17,11 @@ patches:
 - path: slack-notification.yaml
   target:
     kind: Pipeline
+- target:
+    kind: Pipeline
+  # Remove privilege-nested pipeline param and PRIVILEGE_NESTED task param
+  patch: |-
+    - op: remove
+      path: /spec/params/14
+    - op: remove
+      path: /spec/tasks/3/params/9
