Added source build task parameter
Enable users to pass IGNORE_MISSING_SIGNATURES parameter.
When "true" source_build.py won't fail when source image
has missing signatures

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
+++ b/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
@@ -28,6 +28,11 @@ spec:
         the prefetched dependencies.
       type: string
       default: ""
+    - name: IGNORE_UNSIGNED_IMAGE
+      description: When set to "true", source build task won't fail when source
+        image is missing signatures (this can be used for development)
+      type: string
+      default: "false"
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
@@ -141,6 +146,8 @@ spec:
           value: $(results.SOURCE_IMAGE_DIGEST.path)
         - name: WS_BUILD_RESULT_FILE
           value: /var/workdir/source_build_result.json
+        - name: IGNORE_UNSIGNED_IMAGE
+          value: $(params.IGNORE_UNSIGNED_IMAGE)
       script: |
         #!/usr/bin/env bash
         set -euo pipefail
@@ -159,14 +166,20 @@ spec:
 
         base_images=$(if [[ -f "$BASE_IMAGES_FILE" ]]; then cat "$BASE_IMAGES_FILE"; fi)
 
-        ${app_dir}/appenv/bin/python3 ${app_dir}/source_build.py \
-          --output-binary-image "$BINARY_IMAGE" \
-          --workspace /var/workdir \
-          --source-dir "$SOURCE_DIR" \
-          --base-images "$base_images" \
-          --write-result-to "$RESULT_FILE" \
-          --cachi2-artifacts-dir "$CACHI2_ARTIFACTS_DIR" \
+        args=(
+          --output-binary-image "$BINARY_IMAGE"
+          --workspace /var/workdir
+          --source-dir "$SOURCE_DIR"
+          --base-images "$base_images"
+          --write-result-to "$RESULT_FILE"
+          --cachi2-artifacts-dir "$CACHI2_ARTIFACTS_DIR"
           --registry-allowlist="$registry_allowlist"
+        )
+        if [ "$IGNORE_UNSIGNED_IMAGE" == "true" ]; then
+          args+=(--ignore-unsigned-image)
+        fi
+
+        ${app_dir}/appenv/bin/python3 ${app_dir}/source_build.py "${args[@]}"
 
         cat "$RESULT_FILE" | jq -j ".image_url" >"$RESULT_SOURCE_IMAGE_URL"
         cat "$RESULT_FILE" | jq -j ".image_digest" >"$RESULT_SOURCE_IMAGE_DIGEST"
