--- a/task/buildah-remote/0.4/buildah-remote.yaml
+++ b/task/buildah-remote/0.4/buildah-remote.yaml
@@ -612,9 +612,10 @@ spec:
         fi
       done
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End build"
 
       buildah push "$IMAGE" "oci:konflux-final-image:$IMAGE"
+      echo "[$(date --utc -Ins)] End push remote"
       REMOTESSHEOF
       chmod +x scripts/script-build.sh
 
@@ -690,6 +691,7 @@ spec:
       # delete symlinks - they may point outside the container rootfs, messing with SBOM scanners
       find $(cat /shared/container_path) -xtype l -delete
       echo $container > /shared/container_name
+      echo "[$(date --utc -Ins)] End remote"
     securityContext:
       capabilities:
         add:
@@ -800,7 +802,8 @@ spec:
         cat "$(workspaces.source.path)/image-digest"
       } > "$(results.IMAGE_REF.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End push"
     securityContext:
       capabilities:
         add:
@@ -846,7 +849,7 @@ spec:
       echo "Running syft on the image filesystem"
       syft dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-image.json"
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End sbom-syft-generate"
     volumeMounts:
     - mountPath: /var/lib/containers
       name: varlibcontainers
@@ -903,7 +906,7 @@ spec:
         --parsed-dockerfile=/shared/parsed_dockerfile.json \
         --base-images-digests=/shared/base_images_digests
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End prepare-sboms"
     securityContext:
       runAsUser: 0
     workingDir: $(workspaces.source.path)
@@ -944,7 +947,8 @@ spec:
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End upload-sbom"
     volumeMounts:
     - mountPath: /mnt/trusted-ca
       name: trusted-ca
