--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -644,9 +644,10 @@ spec:
         fi
       done
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End build"
 
       buildah push "$IMAGE" "oci:konflux-final-image:$IMAGE"
+      echo "[$(date --utc -Ins)] End push remote"
       REMOTESSHEOF
       chmod +x scripts/script-build.sh
 
@@ -722,6 +723,7 @@ spec:
       # delete symlinks - they may point outside the container rootfs, messing with SBOM scanners
       find $(cat /shared/container_path) -xtype l -delete
       echo $container > /shared/container_name
+      echo "[$(date --utc -Ins)] End remote"
     securityContext:
       capabilities:
         add:
@@ -830,7 +832,8 @@ spec:
         cat "/var/workdir/image-digest"
       } >"$(results.IMAGE_REF.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End push"
     securityContext:
       capabilities:
         add:
@@ -878,7 +881,7 @@ spec:
       echo "Running syft on the image filesystem"
       syft dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="/var/workdir/sbom-image.json"
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End sbom-syft-generate"
     volumeMounts:
     - mountPath: /var/lib/containers
       name: varlibcontainers
@@ -935,7 +938,7 @@ spec:
         --parsed-dockerfile=/shared/parsed_dockerfile.json \
         --base-images-digests=/shared/base_images_digests
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End prepare-sboms"
     securityContext:
       runAsUser: 0
     workingDir: /var/workdir
@@ -976,7 +979,8 @@ spec:
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End upload-sbom"
     volumeMounts:
     - mountPath: /mnt/trusted-ca
       name: trusted-ca
