--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -524,7 +524,7 @@ spec:
         fi
       done
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End build"
 
     securityContext:
       capabilities:
@@ -623,7 +623,8 @@ spec:
         cat "$(workspaces.source.path)/image-digest"
       } > "$(results.IMAGE_REF.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End push"
 
     securityContext:
       runAsUser: 0
@@ -667,7 +668,7 @@ spec:
       echo "Running syft on the image filesystem"
       syft dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-image.json"
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End sbom-syft-generate"
     volumeMounts:
     - mountPath: /var/lib/containers
       name: varlibcontainers
@@ -720,7 +721,7 @@ spec:
         --parsed-dockerfile=/shared/parsed_dockerfile.json \
         --base-images-digests=/shared/base_images_digests
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End prepare-sboms"
 
     workingDir: $(workspaces.source.path)
     securityContext:
@@ -753,7 +754,8 @@ spec:
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
 
-      echo "[$(date --utc -Ins)] End"
+      echo
+      echo "[$(date --utc -Ins)] End upload-sbom"
 
     computeResources:
       limits:
