--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -682,7 +682,7 @@ spec:
         fi
       done
 
-      echo "[$(date --utc -Ins)] End"
+      echo "[$(date --utc -Ins)] End build"
     securityContext:
       capabilities:
         add:
