--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -749,7 +749,7 @@ spec:
           fi
         done
 
-        echo "[$(date --utc -Ins)] End"
+        echo "[$(date --utc -Ins)] End build"
       computeResources:
         limits:
           memory: 16Gi
