--- a/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
+++ b/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
@@ -22,9 +22,9 @@ spec:
     - name: sealights-build-name
       type: string
       description: "A unique build name generated using the commit SHA and current date to prevent conflicts during test reruns."
-    - name: SOURCE_ARTIFACT
-      description: The Trusted Artifact URI pointing to the artifact with the application source code.
+    - name: sealights-agent-version
       type: string
+      description: "A version of the Sealights Node.js Agent"
   params:
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with the application source code.
@@ -130,6 +130,8 @@ spec:
       script: |
         #!/bin/bash
         set -euo pipefail
+
+        echo -n "${AGENT_VERSION}" > "$(results.sealights-agent-version.path)"
 
         export SEALIGHTS_TOKEN BUILD_NAME PATHS_EXCLUDED_ENUM
         SEALIGHTS_TOKEN="$(cat /usr/local/sealights-credentials/token)"
