Add stepaction to gather cluster resources
Add stepaction to gather cluster resources

Add stepaction to gather cluster resources

Add stepaction to gather cluster resources

Add stepaction to gather cluster resources

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -95,6 +95,7 @@
 /stepactions/eaas-get-ephemeral-cluster-credentials         @konflux-ci/eaas-maintainers
 /stepactions/eaas-get-latest-openshift-version-by-prefix    @konflux-ci/eaas-maintainers
 /stepactions/eaas-get-supported-ephemeral-cluster-versions  @konflux-ci/eaas-maintainers
+/stepactions/gather-cluster-resources                       @jfula
 /task/eaas-provision-space                                  @konflux-ci/eaas-maintainers
 
 # renovate groupName=sealights
