--- a/renovate.json
+++ b/renovate.json
@@ -143,6 +143,7 @@
         "stepactions/eaas-get-ephemeral-cluster-credentials/**",
         "stepactions/eaas-get-latest-openshift-version-by-prefix/**",
         "stepactions/eaas-get-supported-ephemeral-cluster-versions/**",
+        "stepactions/gather-cluster-resources/**",
         "task/eaas-provision-space/**"
       ]
     },
